// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> component <Step.Counter /> component should render active behaviour 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #008DFC;
  border: 2px solid #008DFC;
  color: #008DFC;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px; background-color: rgb(230, 245, 255);"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary.default"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component should render completed behaviour 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #008DFC;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <svg
      fill="none"
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 4.818 3.857 7 9 1"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component should render default behaviour 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #008DFC;
  border: 2px solid #008DFC;
  color: #008DFC;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary.default"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component should render active behaviour 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component should render completed behaviour 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    1
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component should render default behaviour 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #7C7C7D;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="secondary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component render active step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #008DFC;
  border: 2px solid #008DFC;
  color: #008DFC;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px; background-color: rgb(230, 245, 255);"
    >
      <span
        class="emotion-4 emotion-5"
        color="primary.default"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="primary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render default step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #008DFC;
  border: 2px solid #008DFC;
  color: #008DFC;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #008DFC;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #7C7C7D;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="primary.default"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="secondary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render disabled step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #7C7C7D;
  border: 2px solid #BABBBB;
  color: #BABBBB;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #BABBBB;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #BABBBB;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="disabled"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="content.disabled"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="disabled"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render error step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FF4A4A;
  border: 2px solid #FF4A4A;
  color: #FF4A4A;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="error"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="error.default"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="error"
    >
      Label
    </span>
  </li>
</div>
`;
